# lit-review-matrix-generator

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
example_tpami/: cea_multimodal_outline.tex
examples/: sample_study.yaml  smoke_test.yaml
src/litreview/: __init__.py  __main__.py  cache.py  cli.py  config.py  dedupe.py  fulltext.py  llm_code.py  models.py  openalex.py  output.py  resolve_unclear.py  scholar.py
studies/: multimodal-cea-yield-cost.yaml
tests/: test_config.py  test_llm_code.py  test_models.py  test_openalex.py  test_resolve_unclear.py
