[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lit-review-matrix-generator"
version = "0.1.0"
description = "Lit-review instructions in, paper matrix out (Google Scholar via SerpAPI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "google-search-results>=2.4.2",
  "PyYAML>=6.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
litreview = "litreview.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
